--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ensureye
+Updated: 11-21-16
 */
 
 .blue {
